--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less-loader": "^11.0.0",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "tree-sitter-cli": "^0.20.6",
     "vue": "^2.6.14",
     "vue-router": "3",
     "vuex": "3"
@@ -25,7 +26,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^9.1.1",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
